# plugins-enigma2

./: .gitignore  Makefile.am  Makefile.am~  Rules-cpp.mak  Rules-po.mak  configure.ac  configure.ac~
partnerbox/po/: Makefile.am
partnerbox/src/: PartnerboxEPGSelection.py
partnerbox/src/servicewebts/: Makefile.am
